--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib/**/*.jar",
+        "d:\\Programacion\\Java\\test\\hamcrest-all.jar",
+        "d:\\Programacion\\Java\\test\\junit-4.13.2.jar"
     ]
 }
